<resources>
    <string name="app_name">NSU_Project</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_orders">My Orders</string>
    <string name="nav_courses">My Courses</string>
    <string name="nav_requests">Requests</string>
    <string name="nav_open">Open Navigation Bar</string>
    <string name="nav_close">Close Navigation Bar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
